tests/ui/conditional-compilation/cfg-arg-invalid-6.rs
//@ compile-flags: --cfg a{

fn main() {}

//~? ERROR invalid `--cfg` argument: `a{` (expected `key` or `key="value"`)

// ferrocene-annotations: um_rustc_cfg
